--- a/index.html
+++ b/index.html
@@ -9,11 +9,10 @@
 </head>
 <body>
     <section class="first-section">
-        <div class="myfirst" >
+        <div class="poor-people" >
             <h1>Let’s Help Those Who Are
                 More In Need</h1>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing <br> elit. Saepe numquam itaque nesciunt quisquam cupiditate sed
-                placeat ipsum voluptatem explicabo voluptas?</p>
+            <p>The people need help we should help the poor people . <br> I visited the place and feel vary sad .so we shout help the this poor people</p>
                 <br>
             <a class="link-button" href="">Donate now</a>
            
@@ -23,7 +22,9 @@
         <div class="text-div">
             <h2 >Donate Now</h2>
             <br>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla similique </p>
+            <p>Please help those people .and chose the amount below</p>
+            <br>
+            <p>your help can alive many people</p>
             <br>
             <br>
         </div>
@@ -48,7 +49,7 @@
             <div class="text-div">
                 <h2>Our Donate Plan</h2>
                 <br>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nulla similique </p>
+                <p>Our main focus will remain food for a family <br> and shelter for a family and also education for a child  </p>
                 <br>
                 <br>
             <div class="donate-plan">
@@ -97,7 +98,7 @@
             <img src="donation4.jpg" alt="">
         </div>
         <div class="half-width">
-            <h1>Their lives depend on your donation</h1>
+            <h1>They need us to survive</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis exercitationem voluptatem ab, debitis ipsa
                 .</p>
             <br>
