--- a/index.html
+++ b/index.html
@@ -62,14 +62,14 @@
                 </div>
                 <div class="shelter">
                     <img src="icons/shelter.png" alt="">
-                    <h3>Food for a family</h3>
+                    <h3>shelter for a family</h3>
                     <br>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum sunt adipisci ducimus corrupti ipsa alias
                         asperiores soluta quae possimus quidem?</p>
                 </div>
                 <div class="education">
                     <img src="icons/Frame-1.png" alt="">
-                    <h3>Food for a family</h3>
+                    <h3>Education for a child</h3>
                     <br>
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laborum sunt adipisci ducimus corrupti ipsa alias
                         asperiores soluta quae possimus quidem?</p>
